@@ -420,6 +420,7 @@
     <variable name="VideoInfoThumb">
 		<value condition="Control.HasFocus(50) + !IsEmpty(Container(50).ListItem.Art(thumb))">$INFO[Container(50).ListItem.Art(thumb)]</value>
         <value condition="Container.Content(Episodes) + !IsEmpty(ListItem.Art(season.poster))">$INFO[ListItem.Art(season.poster)]</value>
+        <value condition="Container.Content(Episodes) + !IsEmpty(ListItem.Art(tvshow.poster))">$INFO[ListItem.Art(tvshow.poster)]</value>
         <value condition="!IsEmpty(ListItem.Art(poster))">$INFO[ListItem.Art(poster)]</value>
         <value condition="Container.Content(tvshows)">views/fallbacks/DefaultFolder.png/large.png</value>
         <value>views/fallbacks/DefaultVideo.png/large.png</value>
