@@ -43,8 +43,8 @@
                     <ondown>500</ondown>
                     <preloaditems>2</preloaditems>
                     <visible>substring(Container.FolderPath,addons,left) | substring(Container.FolderPath,plugin,left) | Container.HasFiles</visible>
-                    <animation effect="slide" end="59" time="400" tween="cubic" easing="inout" condition="Skin.HasSetting(ThumbnailSmall) | substring(Container.FolderPath,addons,left) | substring(Container.FolderPath,plugin,left)">Conditional</animation>
-                    <itemlayout width="344" height="344" condition="!Skin.HasSetting(ThumbnailSmall) + ![substring(Container.FolderPath,addons,left) | substring(Container.FolderPath,plugin,left)]">
+                    <animation effect="slide" end="59" time="400" tween="cubic" easing="inout" condition="Skin.HasSetting(ThumbnailSmall) | substring(Container.FolderPath,addons,left)">Conditional</animation>
+                    <itemlayout width="344" height="344" condition="!Skin.HasSetting(ThumbnailSmall) + ![substring(Container.FolderPath,addons,left)]">
                         <control type="image">
                             <description>Poster Back</description>
                             <posx>12</posx>
@@ -95,7 +95,7 @@
                         </control>
                         
                     </itemlayout>
-                    <itemlayout width="229" height="230" condition="Skin.HasSetting(ThumbnailSmall) | substring(Container.FolderPath,addons,left) | substring(Container.FolderPath,plugin,left)">
+                    <itemlayout width="229" height="230" condition="Skin.HasSetting(ThumbnailSmall) | substring(Container.FolderPath,addons,left)">
                         <control type="image">
                             <description>Poster Back</description>
                             <posx>12</posx>
@@ -145,7 +145,7 @@
                             <visible>!IsEmpty(ListItem.Overlay)</visible>
                         </control>
                     </itemlayout>
-                    <focusedlayout width="344" height="344" condition="!Skin.HasSetting(ThumbnailSmall) = ![substring(Container.FolderPath,addons,left) | substring(Container.FolderPath,plugin,left)]">
+                    <focusedlayout width="344" height="344" condition="!Skin.HasSetting(ThumbnailSmall) = ![substring(Container.FolderPath,addons,left)]">
                         <control type="group">
                             <animation type="Focus">
                                 <effect type="fade" start="93.36" end="100" time="200" tween="sine" easing="in" />
@@ -219,7 +219,7 @@
                             </control>
                         </control>
                     </focusedlayout>
-                    <focusedlayout width="229" height="230" condition="Skin.HasSetting(ThumbnailSmall) | substring(Container.FolderPath,addons,left) | substring(Container.FolderPath,plugin,left)">
+                    <focusedlayout width="229" height="230" condition="Skin.HasSetting(ThumbnailSmall) | substring(Container.FolderPath,addons,left)">
                         <control type="group">
                             <animation type="Focus">
                                 <effect type="fade" start="93.36" end="100" time="200" tween="sine" easing="in" />
