@@ -78,4 +78,6 @@ Rearranged categories so LiveTV is on the left of movies
 Fixed icon selection not showing image
 Can enable and disable category from custom home items menu
 Auto prompt to select icon from extras after choosing path for custom item
-Fixed poster aspect for widgets
+Fixed weather scrolling issue (hopefully?)
+Fixed thumbs in plugins to show large and small
+Fixed weather panel issue
